tests/snapshots/case__case_ignore_different@002.snap
---
source: tests/case.rs
description: "input: items [\"aBcDeF\"]\noptions: --case ignore\nafter:\n  @type \"Abc\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> aBcDeF                                                                        "
"  1/1                                                                        0/0"
"> Abc                                                                           "
cursor: (24, 6)
