tests/snapshots/case__case_ignore_no_match@002.snap
---
source: tests/case.rs
description: "input: items [\"aBcDeF\"]\noptions: --case ignore\nafter:\n  @type \"z\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> z                                                                             "
cursor: (24, 4)
