tests/snapshots/case__case_non_ascii-2.snap
---
source: tests/case.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  СЛОВО                                                                         "
"  Слово                                                                         "
"> слово                                                                         "
"  3/3                                                                        0/0"
"> слово                                                                         "
cursor: (7, 23)
