tests/snapshots/case__case_non_ascii.snap
---
source: tests/case.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  СЛОВО                                                                         "
"  Слово                                                                         "
"> слово                                                                         "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
