tests/snapshots/case__case_non_ascii@001.snap
---
source: tests/case.rs
description: "input: items [\"слово\", \"Слово\", \"СЛОВО\"]\noptions: --case smart"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  СЛОВО                                                                         "
"  Слово                                                                         "
"> слово                                                                         "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
